--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomePage Instagram</title>
+    <title>Homepage Instagram</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,30 +17,40 @@
         </section>
         
         <section class="section-login">
-            <figure>
-                <img src="img/instagram-logo.png" alt="logo-instagram">
-            </figure>
+            <div class="group">
+                <figure>
+                    <img src="img/instagram-logo.png" alt="logo-instagram">
+                </figure>
+                
+                <fieldset>
+                    <input type="email" name="" placeholder="Telefone, nome de usuário ou email">
+                </fieldset>
+                <fieldset>
+                    <input type="password" name="" placeholder="Senha">
+                </fieldset>
+                <button type="submit">Entrar</button>
+                <div class="container-divider">
+                    <hr class="divider">
+                    <h4>OU</h4>
+                    <hr class="divider">
+                </div>
+                <a href="">
+                    <p>Esqueceu a senha?</p>
+                </a>
+            </div>
 
-            <input type="email" name="" placeholder="Telefone, nome de usuário ou email">
-            <input type="password" name="" placeholder="Senha">
-            <button type="submit">Entrar</button>
-            <h4>Ou</h4>
-            <a href="">
-                <p>Esqueceu a senha?</p>
-            </a>
-
-            <div class="not-account">
-                <p>Não tem uma conta?<a href="http://">Cadastre - se</a></p>
+            <div class="group">
+                <p>Não tem uma conta? <a href="">Cadastre - se</a></p>
             </div>
 
             <div class="footer-login">
                 <p>Obtenha o aplicativo</p>
                 <div class="btn-footer-login">
                     <figure>
-                        <img src="img/apple-button.png" alt="button-apple" srcset="">
+                        <img src="img/apple-button.png" alt="button-apple">
                     </figure>
                     <figure>
-                        <img src="img/googleplay-button.png" alt="button-google" srcset="">
+                        <img src="img/googleplay-button.png" alt="button-google">
                     </figure>
                 </div>
             </div>
